--- a/home/templates/condition/condition.html
+++ b/home/templates/condition/condition.html
@@ -32,7 +32,14 @@
       <form method="post" enctype=""> 
           {% csrf_token %}
           
-         
+          {% if messages %}
+          <div class="alert alert-danger">
+            {% for message in messages %}
+              {{ message }}
+            {% endfor %}
+          </div>
+        {% endif %}
+        
 
           <div >
             <div >
