--- a/home/templates/import_file/upload_file.html
+++ b/home/templates/import_file/upload_file.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Your Page Title</title>
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <style>
  
       
@@ -64,42 +71,40 @@
 </style>
 
 
-
-
 <div class="main-panel">
-    <div class="content-wrapper">
-     
-      <form method="post" enctype="multipart/form-data"> 
-        {% csrf_token %}
-       
-       <div class="row">
-    
-    
+  <div class="content-wrapper">
 
-    <div class="col-12 grid-margin stretch-card">
-      <div class="card">
-        <div class="card-body">
-       
-            <label for="images" class="drop-container">
+    {% if messages %}
+      <div class="messages">
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+          </div>
+        {% endfor %}
+      </div>
+    {% endif %}
+
+    <form method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+      <div class="row">
+        <div class="col-12 grid-margin stretch-card">
+          <div class="card">
+            <div class="card-body">
+              <label for="images" class="drop-container">
                 <span class="drop-title">Import fichier</span>
                 or
-                <input type="file" name="my_file" >
+                <input type="file" name="my_file">
               </label>
-</div>
-<div class="modal-footer">
-    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-    <button type="submit" class="btn btn-primary">Upload</button>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Upload</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
-</form>
 
-</div>
-
-
-</div>
-
-
-
-  
-  
 {% endblock %}
