--- a/home/templates/condition/condition.html
+++ b/home/templates/condition/condition.html
@@ -163,7 +163,7 @@
                   <thead>
                     <tr>
                       <th> ID </th>
-                      <th> field</th>
+                      <th> champ</th>
                       <th> case </th>
                       <th> Action </th>
                       <th> Resultat </th>
