--- a/home/templates/import_file/import.html
+++ b/home/templates/import_file/import.html
@@ -241,7 +241,7 @@ var doughnutChart = new Chart(doughnutChartCanvas, {
                                
                     
                                 <div class="modal-body">
-                                    <label>Upload a file </lable> 
+                                    <label>exporter un fichier</lable> 
                                         <br>
                                         <br>
                                         <input type="text" class="form-control" id="rute" name="name" value="vide" placeholder="Name de fichier"> 
@@ -376,7 +376,7 @@ var doughnutChart = new Chart(doughnutChartCanvas, {
 
                      
                         
-                          <button type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-inverse-success btn-fw">Applicer Role</button>
+                          <button type="button" data-toggle="modal" data-target="#exampleModal" class="btn btn-inverse-success btn-fw">appliquer règle</button>
                 
                         <a href="" type="button" class="btn btn-inverse-secondary btn-fw"onclick='overlay()' data-toggle="modal" data-target="#example">
                             <i class="fa fa-file-excel-o"></i> TEST
@@ -402,7 +402,7 @@ var doughnutChart = new Chart(doughnutChartCanvas, {
               <div class="text-center col-lg-12 grid-margin stretch-card">
                 <div class="card col-lg-10">
                   <div class="card-body">
-                    <h4 class="card-title">Doughnut chart</h4>
+                    <h4 class="card-title">Graphique</h4>
                 
                     <canvas id="doughnutChart" style="height:250px"></canvas>
                   </div>
