--- a/home/templates/import_file/upload_file.html
+++ b/home/templates/import_file/upload_file.html
@@ -91,14 +91,14 @@
           <div class="card">
             <div class="card-body">
               <label for="images" class="drop-container">
-                <span class="drop-title">Import fichier</span>
+                <span class="drop-title">Importer un fichier</span>
                 or
                 <input type="file" name="my_file">
               </label>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary">Upload</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+              <button type="submit" class="btn btn-primary">importer </button>
             </div>
           </div>
         </div>
