--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
         <nav class="sidebar sidebar-offcanvas" id="sidebar">
           <ul class="nav">
             <li class="nav-item nav-profile">
-              <a href="{% url 'profile'%}" class="nav-link">
+              <a  href="{% url 'statistique' %}" class="nav-link">
                 <div class="nav-profile-image">
                   <img src="{% static 'assets/images/a.png' %}" alt="profile">
                   <span class="login-status online"></span>
@@ -102,7 +102,7 @@
 
             <li class="nav-item">
               <a class="nav-link" href="{% url 'file'%}"style="color:#i00;">
-                <span class="menu-title">Import And Applay</span>
+                <span class="menu-title">Importer et Appliquer</span>
                 
                 <i class="mdi mdi-file-excel menu-icon"></i>
               </a>
@@ -112,29 +112,33 @@
 
             <li class="nav-item">
               <a class="nav-link" href="{% url 'rule_list'%}">
-                <span class="menu-title">Rules </span>
+                <span class="menu-title">Règles </span>
                 <i class="mdi mdi-account menu-icon"></i>
               </a>
             </li>
             {% endif %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'List_condition'%}">
-                <span class="menu-title">All condution</span>
+                <span class="menu-title">Conditions</span>
                 <i class="mdi mdi-chart-bar menu-icon"></i>
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'resultas_List'%}">
-                <span class="menu-title">All Results</span>
+                <span class="menu-title">Résultats</span>
                 <i class="mdi mdi-chart-bar menu-icon"></i>
               </a>
             </li>
+           
+
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'chatbot'%}">
-                <span class="menu-title">ChatBot</span>
+              <a class="nav-link" href="{% url 'chatbottt2'%}">
+                <span class="menu-title">ChatBottt</span>
                 <i class="mdi mdi-reddit menu-icon"></i>
               </a>
             </li>
+            
+
           
             {% if user.role != 'user' %}
              <!-- Show manager-specific content -->
@@ -154,7 +158,7 @@
                   <h6 class="font-weight-normal mb-3">FILE</h6>
                 </div>
             
-                <a href=" {% url 'upload'%}" ><button class="btn btn-gradient-info mt-4">+ Import fichier</button></a>
+                <a href=" {% url 'upload'%}" ><button class="btn btn-gradient-info mt-4">+ Importer un fichier</button></a>
               </a>
           
             </li>
