--- a/home/templates/Resulta/resultas.html
+++ b/home/templates/Resulta/resultas.html
@@ -17,7 +17,7 @@
       <div class="card">
        
         <div class="card-body">
-          <div class="col-sm-4"><h2>List des <b>Resulta</b></h2></div>
+          <div class="col-sm-4"><h2>Liste des <b>Résultats</b></h2></div>
 
 
 
@@ -119,7 +119,7 @@
           </div>
         </div>
             <div >
-              <label for="rute" class="col-sm-3 col-form-label">Resulta :</label>
+              <label for="rute" class="col-sm-3 col-form-label">Résultat :</label>
               <div class="col-sm-9">
                 <input type="text" class="form-control" id="rute" name="condition" placeholder="Name Rute">
               </div>
@@ -129,7 +129,7 @@
             <div>
               <br>
 
-            <button type="submit" class="btn btn-gradient-success btn-icon-text">Ajouter Resulta </button>
+            <button type="submit" class="btn btn-gradient-success btn-icon-text">Ajouter résultats</button>
             </div>
           {% endblock %}
       </form>
@@ -173,7 +173,7 @@
                   <thead>
                     <tr>
                       <th> ID </th>
-                      <th> field</th>
+                      <th> champ</th>
                       <th> case </th>
                       <th> Action </th>
 
