--- a/home/templates/User/login.html
+++ b/home/templates/User/login.html
@@ -75,7 +75,7 @@
               
                       <div class="col">
                         <!-- Simple link -->
-                        <a href="#!">Forgot password?</a>
+                        <a href="forgot_password">Forgot password?</a>
                       </div>
                     </div>
               
