--- a/home/templates/home/profile.html
+++ b/home/templates/home/profile.html
@@ -1,99 +1,326 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{%block content%}
-
-
-
-
-
-
-
-<script >
-    $(function () {
-  /* ChartJS
-  * -------
-  * Data and config for chartjs
-  */
-  'use strict';
-  
-  var doughnutPieData = {
-  datasets: [{
-    data: [{{faux}},{{vrai}} ],
-    backgroundColor: [
-      'rgba(255, 99, 132, 0.5)',
-      'rgba(54, 162, 235, 0.5)',
-      'rgba(255, 206, 86, 0.5)',
-      'rgba(75, 192, 192, 0.5)',
-      'rgba(153, 102, 255, 0.5)',
-      'rgba(255, 159, 64, 0.5)'
-    ],
-    borderColor: [
-      'rgba(255,99,132,1)',
-      'rgba(54, 162, 235, 1)',
-      'rgba(255, 206, 86, 1)',
-      'rgba(75, 192, 192, 1)',
-      'rgba(153, 102, 255, 1)',
-      'rgba(255, 159, 64, 1)'
-    ],
-  }],
-  
-  // These labels appear in the legend and in the tooltips when hovering different arcs
-  labels: [
-    'Faux {{faux}}%',
-    ' Vrai {{vrai}}%',
-  ]
-  };
-  var doughnutPieOptions = {
-  responsive: true,
-  animation: {
-    animateScale: true,
-    animateRotate: true
+{% block content %}
+<style>
+  #page-wrapper {
+    padding: 15px 25px;
   }
-  };
   
+  .card {
+    background-color: #fff;
+    cursor: pointer;
+    border-radius: 20px;
+    border: none;
+    position: relative;
+    margin-bottom: 20px;
+    box-shadow: 0 0.46875rem 2.1875rem rgba(90,97,105,0.1), 0 0.9375rem 1.40625rem rgba(90,97,105,0.1), 0 0.25rem 0.53125rem rgba(90,97,105,0.12), 0 0.125rem 0.1875rem rgba(90,97,105,0.1);
+  }
+  .l-bg-cherry {
+    background: linear-gradient(to right, #74373c, rgb(229, 23, 54)) !important;
+    color: #fff;
+  }
   
-  if ($("#doughnutChart").length) {
-  var doughnutChartCanvas = $("#doughnutChart").get(0).getContext("2d");
-  var doughnutChart = new Chart(doughnutChartCanvas, {
-    type: 'doughnut',
-    data: doughnutPieData,
-    options: doughnutPieOptions
-  });
+  .l-bg-blue-dark {
+    background: linear-gradient(to right, #373b44, #4286f4) !important;
+    color: #fff;
+  }
+  
+  .l-bg-green-dark {
+    background: linear-gradient(to right, #0a504a, #38ef7d) !important;
+    color: #fff;
+  }
+  
+  .l-bg-orange-dark {
+    background: linear-gradient(to right, #a86008, #ffba56) !important;
+    color: #fff;
+  }
+  
+  .card .card-statistic-3 .card-icon-large .fas, .card .card-statistic-3 .card-icon-large .far, .card .card-statistic-3 .card-icon-large .fab, .card .card-statistic-3 .card-icon-large .fal {
+    font-size: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+        
+    
+  }
+  
+  .card .card-statistic-3 .card-icon {
+    text-align: center;
+    line-height: 50px;
+    margin-left: 15px;
+    color: #000;
+    position: absolute;
+    right: 5px;
+    top: 20px;
+    opacity: 0.1;
   }
   
   
-  });
-  </script>
+  .l-bg-cyan {
+    background: linear-gradient(135deg, #289cf5, #84c0ec) !important;
+    color: #fff;
+  }
   
+  .l-bg-green {
+    background: linear-gradient(135deg, #23bdb8 0%, #43e794 100%) !important;
+    color: #fff;
+  }
+  
+  .l-bg-orange {
+    background: linear-gradient(to right, #f9900e, #ffba56) !important;
+    color: #fff;
+  }
+  
+  .l-bg-cyan {
+    background: linear-gradient(135deg, #289cf5, #84c0ec) !important;
+    color: #fff;
+  }
+  
+  #chart-container-conditions {
+    width: 100%; /* Utilisez la largeur de la div parent (col-md-6) */
+    height: 225px; /* Ajustez la hauteur selon vos besoins */
+  }
+  
+  .card-title {
+    color: #fff; /* Définir la couleur du texte à blanc */
+  }
+</style>
+<head>
+    
+    <!-- les liens CDN Bootstrap et Font Awesome ici -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <ol class="breadcrumb">
+      <li class="active">
+        <h3><i class="fa fa-dashboard"></i> Dashboard Statistics Overview </h3>
+      </li>
+    </ol>
 
+</head>  
 
-
-
-
-
-<div class="col-md-8 col-lg-8 col-xl-8 order-2 order-lg-8">
-    <div class="card">
-        <div class="card-body">
-            <div class="clearfix">
-                <h4 class="card-title float-left">Visit And Sales Statistics</h4>
-                <div id="visit-sale-chart-legend" class="rounded-legend legend-horizontal legend-top-right float-right"></div>
-            </div>
-            <canvas id="visit-sale-chart" class="mt-2">
-                
-            </canvas>
-
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+      
+        <div class="top-section "> 
+          <div class="col-md-12">
+            <div class="row">
+              <!-- Première carte -->
+              <div class="col-xl-3 col-lg-6">
+                <div class="card l-bg-blue-dark">
+                  <div class="card-statistic-3 p-4">
+                    <div class="card-icon card-icon-large"><i class="fas fa-users"></i></div>
+                    <div class="mb-4">
+                      <h4 class="d-flex align-items-center mb-0">Total Users</h4>
+                    </div>
+                    <div class="row align-items-center mb-2 d-flex">
+                      <div class="col-8">
+                        <h2 class="d-flex align-items-center mb-0">{{total_users}}</h2>
+                      </div>
+                      <div class="col-4 text-right">
+                        <span>12.5% <i class="fa fa-arrow-up"></i></span>
+                      </div>
+                    </div>
+                    <div class="progress mt-1" data-height="8" style="height: 8px;">
+                      <div class="progress-bar l-bg-cyan" role="progressbar" data-width="25%" aria-valuenow="25" aria-valuemin="0"
+                        aria-valuemax="100" style="width: 25%;"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
           
-            <div>
-                <p>Nombre d'utilisateurs User: {{ i }}</p>
-                <p>Nombre d'utilisateurs Manager: {{ j }}</p>
-                <p>Nombre d'utilisateurs Admin: {{ k }}</p>
+            <div class="col-xl-3 col-lg-6 ">
+                <div class="card l-bg-orange-dark">
+                <div class="card-statistic-3 p-4">
+                    <div class="card-icon card-icon-large"><i class="fas fa-users"></i></div>
+                    <div class="mb-4">
+                    <h4 class="d-flex align-items-center mb-0">Regles</h4>
+                    </div>
+                    <div class="row align-items-center mb-2 d-flex">
+                    <div class="col-8">
+                        <h2 class="d-flex align-items-center mb-0">{{total_rules}}</h2> 
+                    </div>
+                    <div class="col-4 text-right">
+                        <span>9.23% <i class="fa fa-arrow-up"></i></span>
+                    </div>
+                    </div>
+                    <div class="progress mt-1 " data-height="8" style="height: 8px;">
+                    <div class="progress-bar l-bg-green" role="progressbar" data-width="25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%;"></div>
+                    </div>
+                </div>
+                </div>
             </div>
+            
+            <div class="col-xl-3 col-lg-6 ">
+                <div class="card l-bg-green-dark">
+                <div class="card-statistic-3 p-4">
+                    <div class="card-icon card-icon-large"><i class="fas fa-ticket-alt"></i></div>
+                    <div class="mb-4">
+                    <h4 class="d-flex align-items-center mb-0">Conditions</h4>
+                    </div>
+                    <div class="row align-items-center mb-2 d-flex">
+                    <div class="col-8">
+                        <h2 class="d-flex align-items-center mb-0">{{total_conditions}}</h2> 
+                    </div>
+                    <div class="col-4 text-right">
+                        <span>10% <i class="fa fa-arrow-up"></i></span>
+                    </div>
+                    </div>
+                    <div class="progress mt-1 " data-height="8" style="height: 8px;">
+                    <div class="progress-bar l-bg-orange" role="progressbar" data-width="25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%;"></div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            
+            <div class="col-xl-3 col-lg-6">
+                <div class="card l-bg-cherry">
+                <div class="card-statistic-3 p-4">
+                    <div class="card-icon card-icon-large"><i class="fas fa-ticket-alt"></i></div>
+                    <div class="mb-4">
+                    <h4 class="d-flex align-items-center mb-0">Resultats</h4>
+                    </div>
+                    <div class="row align-items-center mb-2 d-flex">
+                    <div class="col-8">
+                        <h2 class="d-flex align-items-center mb-0">{{total_resultats}}</h2> 
+                    </div>
+                    <div class="col-4 text-right">
+                        <span>2.5% <i class="fa fa-arrow-up"></i></span>
+                    </div>
+                    </div>
+                    <div class="progress mt-1 " data-height="8" style="height: 8px;">
+                    <div class="progress-bar l-bg-cyan" role="progressbar" data-width="25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width: 25%;"></div>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            </div>
+          </div>
         </div>
+
+        <div class="row">
+          <!-- Graphique des condtions à gauche -->
+          <div class="col-md-6 grid-margin stretch-card">
+            <div class="card">
+              <div class="card-body">
+                <div id="chart-container-conditions" class="chart-container"></div>
+              <div>
+            </div>
+          </div>
+        </div>
+        </div>
+
+          <!-- Graphique des règles à droite -->
+          <div class="col-md-6 grid-margin stretch-card">
+            <div class="card">
+              <div class="card-body">
+                <!-- Ajoutez un conteneur pour le graphique -->
+                <div id="chart-container-rules" class="chart-container"></div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </div>
-</div></div></div>
+  </div>
+
+  <!-- Incluez Highcharts dans votre template (assurez-vous de l'importer correctement) -->
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+
+  <!-- Ajoutez un script pour initialiser le graphique  des regles avec les données de Django -->
+  <script>
+      document.addEventListener('DOMContentLoaded', function () {
+          var chartData = {{ chart_data_rules|safe }};
+          
+          Highcharts.chart('chart-container-rules', {
+              chart: {
+                  type: 'bar',
+                  height: 225
+              },
+              title: {
+                  text: ' Conditions par Regle '
+              },
+              xAxis: {
+                  categories: chartData.categories,
+                  title: {
+                    text: 'Nom des regles'
+                } 
+              },
+              yAxis: {
+                tickInterval: 1,
+                title: {
+                  text: 'Nombre des condition'
+              }
+              },
+              plotOptions: {
+                bar: {
+                    groupPadding: 0.1,
+                }
+            },
+              series: [
+                  {
+                      type: 'bar',
+                      showInLegend: false,
+                      colorByPoint: true,
+                      data: chartData.data.map((count, index) => ({
+                          name: chartData.categories[index],
+                          y: count,
+                          
+                      })),
+                  },
+              ],
+              credits: {
+                  enabled: false
+              }
+          });
+      });
+  </script>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var chartDataConditions = {{ chart_data_conditions|safe }};
+        
+        Highcharts.chart('chart-container-conditions', {
+            chart: {
+                type: 'bar',
+                height: 225
+            },
+            title: {
+                text: 'Résultats par condition'
+            },
+            xAxis: {
+                categories: chartDataConditions.categories,
+                title: {
+                  text: 'Nom des conditions'
+                }
+            },
+            yAxis: {
+              tickInterval: 1,
+              title: {
+                text: 'Nombre total de résultats'
+            }
+            },
+            plotOptions: {
+              bar: {
+                  groupPadding: 0.1,
+              }
+          },
+            series: [{
+                colorByPoint: true,
+                showInLegend: false,
+                data: chartDataConditions.data,
+            }],
+            credits: {
+                enabled: false
+            }
+        });
+    });
+  </script>
 
 
+{% endblock %}
 
-
-{%endblock content%}
