--- a/home/templates/rules/list_rule.html
+++ b/home/templates/rules/list_rule.html
@@ -234,11 +234,11 @@
             <div class="table-title">
                 <div class="row">
                     <div class="col-sm-6">
-						<h2>List des  <b>Rules</b></h2>
+						<h2>Liste des <b>Règles</b></h2>
 					</div>
 					<div class="col-sm-6">
 						
-						<a href="{% url 'rule_create' %}" class="btn btn-success" ><i class="material-icons">&#xE147;</i> <span>Create a new rule</span></a>
+						<a href="{% url 'rule_create' %}" class="btn btn-success" ><i class="material-icons">&#xE147;</i> <span>Ajouter règle</span></a>
 					
 					</div>
                 </div>
@@ -249,10 +249,10 @@
           <th>
               ID
           </th>
-                      <th>Rule Name</th>
-                      <th>updated_at</th>
+                      <th>Nom de la règle</th>
+                      <th>mise à jour_at</th>
 
-                      <th>updated_by</th>
+                      <th>Mis à jour par</th>
                       <th>Actions</th>
                   </tr>
               </thead>
@@ -273,12 +273,12 @@
                           <a href="{% url 'rule_update' pk=rule.pk %}" ><i class="material-icons" data-toggle="tooltip" title="Edit" style="color:#ffd600  " >&#xE254;</i></a>
                           <a href="#deleteEmployeeModal-{{ forloop.counter }}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
             <a href=" {% url 'rule_detail' pk=rule.pk %}" class="view" title="View" data-toggle="tooltip"><i class="material-icons  "style="color:#1b5e20  ">&#xE417;</i></a>
-            <a href="{% url 'condition' rule.id %}">condution </a>
+            <a href="{% url 'condition' rule.id %}">condition </a>
                       </td>
                   </tr>
         {% empty %}
         <tr>
-          <td colspan="3">No Equipes found.</td>
+          <td colspan="3">Aucune équipe trouvée.</td>
         </tr>
         {% endfor %}
                             
@@ -308,16 +308,16 @@
 			<div class="modal-content">
 				<form>
 					<div class="modal-header">						
-						<h4 class="modal-title">Delete </h4>
+						<h4 class="modal-title">Supprimer </h4>
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					</div>
 					<div class="modal-body">					
-						<p>Are you sure you want to delete these Records?</p>
-						<p class="text-warning"><small>are you{{ rule.name }} information Delete</small></p>
+						<p>Êtes-vous sûr de vouloir supprimer ces enregistrements ?</p>
+						<p class="text-warning"><small>es-tu{{ rule.name }} informations Supprimer</small></p>
 					</div>
 					<div class="modal-footer">
 						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-						<a href="{% url 'rule_delete' pk=rule.pk %}"type="submit" class="btn btn-danger">Delete</a>
+						<a href="{% url 'rule_delete' pk=rule.pk %}"type="submit" class="btn btn-danger">Supprimer</a>
 					</div>
 				</form>
 			</div>
