--- a/home/templates/rules/rule_confirm_delete.html
+++ b/home/templates/rules/rule_confirm_delete.html
@@ -9,13 +9,13 @@
   <div class="card">
    
     <div class="card-body">
-                <div class="col-sm-4"><h2>Confirm Deletion</h2></div>
+                <div class="col-sm-4"><h2>Confirmer la suppression</h2></div>
           
-          <p>Are you sure you want to delete the rule "{{ rule.name }}"?</p>
+          <p>Êtes-vous sûr de vouloir supprimer la règle"{{ rule.name }}"?</p>
           <form action="{% url 'rule_delete' pk=rule.pk %}" method="post">
             {% csrf_token %}
             <input type="submit" class="btn btn-outline-danger" value="Delete">
-            <button type="button" class="btn btn-outline-secondary"><a href="{% url 'rule_detail' pk=rule.pk %}">Cancel</a></button>
+            <button type="button" class="btn btn-outline-secondary"><a href="{% url 'rule_detail' pk=rule.pk %}">Annuler</a></button>
 
 
           </form>
